NXP-24870: Clearer testing and refactor following feedback